2003-01-26  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in, lib/Foomatic/DB.pm, configure.in,
	  Makefile.in, makeDefaults.in, USAGE: Added support for
	  compressed PPD files ("file.ppd.gz") supplied with the "--ppd"
	  option of foomatic-configure.
	
2003-01-22  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in: Made URIs for printer connections ("-c"
	  option) absolutely compatible to CUPS (Now one can use
	  "parallel:...", "usb:...", and "serial:..."). Automatic
	  conversion of USB URIs to URIs referring to manufacturer, model,
	  and serial number of the printer under CUPS 1.1.17 or newer.
	  Support for the MTink daemon from http://xwtools.automatix.de/.
	
	* lib/Foomatic/DB.pm: Improved sorting of option choices. Made it
	  faster and removed the long list of resolutions. Let the
	  "normalizename()" function also support strings with more than
	  one number and with floating point numbers.

	* configure.in, Makefile.in, makeDefaults.in: Added paths for
	  the new features of "foomatic-configure".

	* README, USAGE: Documented the new features of
	  "foomatic-configure".

2003-01-20  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Fixes for Adobe compliance of the generated
	  PPD files: In "*Product: ..." IEEE model name has to be in
	  parantheses, "*ShortNickName: ..." must be different for all PPD
	  files, driver name added to achieve this, "*ShortNickName: ..."
	  entry has to come before "*NickName: ...".

	* lib/Foomatic/DB.pm, foomatic-perl-data.c: Now the "*Nickname"
	  and "*ModelName" entries of the PPD file get marked when the
	  recommended driver is used.
	
2003-01-07  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Fixed a typo in the calculation of the
	  values in the "*ImageableArea" lines of the PPD files.

2003-01-05  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-perl-data.c: Support for margin settings in a printer