@@ -4,6 +4,10 @@
 	  Makefile.in, makeDefaults.in, USAGE: Added support for
 	  compressed PPD files ("file.ppd.gz") supplied with the "--ppd"
 	  option of foomatic-configure.
+
+	* lib/Foomatic/DB.pm: For Foomatic PPDs let 'make' and 'model'
+	  fields be put into the Perl data structure generated by
+	  ppdtoperl().
 	
 2003-01-22  Till Kamppeter <till.kamppeter@gmx.net>
 
